snapshots/care/data4life/hc-util-sdk-kmp/error/maven-metadata.xml.sha256
3a44ab51a5e08c1bd144d769d8274ae2f99cb68d63a7e04c0091c9d3496e34c3